# FFBBApiClientV3

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  LOCAL_CI_GUIDE.md  README.md  README.rst  RELEASE_NOTES.md  SECURITY.md  benchmark_search_organisme.py  diagnose-ci-issues.sh  fix_readme.py  index.html  pyproject.toml  pytest.ini  robots.txt  run-ci-locally.sh  scratch.py  setup.cfg  setup.py  test_zip.py  tox.ini
.github/: dependabot.yml
.github/scripts/: check_wrapper_parity.py
.github/workflows/: check_wrapper_parity.yml  ci.yml  codeql.yml  deploy-pages.yml  publish.yml  release-after-discovery-merge.yml  update-ffbb-api-discovery.yml
.jules/: bolt.md
data/: api.ffbb.app.json  api_update_summary.md  collections.json  endpoint_discovery.json  indexes.json  meilisearch-prod.ffbb.app.json  openapi.json  openapi_full.json  type_discovery_corrections.json
docs/: architecture.rst  conf.py  examples.rst  index.rst  migration.rst  requirements.txt  test_strategy.md  testing_conventions.md
examples/: README.md  complete_usage_example.py  quick_start.py  team_ranking_analysis.py
scripts/: benchmark_search_organisme.py  discover_endpoints.py  discover_types.py
src/ffbb_api_client_v2/: Cartographie.py  CompetitionOrigine.py  Coordonnees.py  DocumentFlyer.py  MultiSearchResults.py  NatureSol.py  Organisateur.py  OrganismeIDPere.py  Poule.py  __init__.py  api_ffbb_app_client.py  config.py  converters.py  ffbb_api_client_v2.py  lives.py  meilisearch_client.py  meilisearch_client_extension.py  meilisearch_ffbb_client.py  multi_search_queries.py  multi_search_query.py  multi_search_result_competitions.py  multi_search_result_organismes.py  multi_search_result_pratiques.py  multi_search_result_rencontres.py  multi_search_result_salles.py  multi_search_result_terrains.py  multi_search_result_tournois.py  multi_search_results.py  salle.py
src/ffbb_api_client_v2/clients/: api_ffbb_app_client.py  ffbb_api_client_v2.py  meilisearch_client.py  meilisearch_ffbb_client.py
src/ffbb_api_client_v2/helpers/: http_requests_helper.py  http_requests_utils.py  meilisearch_client_extension.py  multi_search_query_helper.py
src/ffbb_api_client_v2/models/: Affiche.py  Cartographie.py  Categorie.py  Commune.py  CompetitionID.py  CompetitionIDCategorie.py  CompetitionIDSexe.py  CompetitionIDTypeCompetition.py  CompetitionIDTypeCompetitionGenerique.py  CompetitionOrigine.py  CompetitionOrigineCategorie.py  CompetitionOrigineTypeCompetitionGenerique.py  Coordonnees.py  DocumentFlyer.py  Folder.py  Geo.py  IDEngagementEquipe.py  IDOrganismeEquipe.py  IDOrganismeEquipe1Logo.py  IDPoule.py  Labellisation.py  MultiSearchResults.py  NatureSol.py  NiveauClass.py  Organisateur.py  OrganismeIDPere.py  Poule.py  PurpleLogo.py  Saison.py  TeamEngagement.py  TournoiTypeClass.py  TypeAssociation.py  TypeAssociationLibelle.py  TypeClass.py  TypeCompetitionGenerique.py  __init__.py  affiche.py  cartographie.py  categorie.py  commune.py  (+85 more)
src/ffbb_api_client_v2/utils/: __init__.py  cache_manager.py  converter_utils.py  input_validation.py  retry_utils.py  secure_logging.py  token_manager.py
src/ffbb_api_client_v3/: __init__.py  config.py
src/ffbb_api_client_v3/clients/: __init__.py  api_ffbb_app_client.py  api_ffbb_app_client_extensions.py  ffbb_api_client_v3.py  meilisearch_client.py  meilisearch_ffbb_client.py
src/ffbb_api_client_v3/data/: __init__.py  collections.json  endpoint_discovery.json  indexes.json  openapi.json
src/ffbb_api_client_v3/helpers/: http_requests_helper.py  http_requests_utils.py  meilisearch_client_extension.py  multi_search_query_helper.py
src/ffbb_api_client_v3/models/: __init__.py  categorie.py  clock.py  club_contacts.py  competition_id_sexe.py  competitions_facet_stats.py  engagement_contacts.py  engagements_hit.py  facet_distribution.py  facet_stats.py  field_set.py  formation_session.py  formations_facet_stats.py  formations_multi_search_query.py  get_competition_response.py  get_engagement_response.py  get_entraineur_response.py  get_formation_response.py  get_officiel_response.py  get_organisme_response.py  get_poule_response.py  get_pratique_response.py  get_rencontre_response.py  get_salle_response.py  get_terrain_response.py  get_tournoi_response.py  live.py  lives.py  multi_search_queries.py  multi_search_query.py  multi_search_result_engagements.py  multi_search_result_rencontres.py  multi_search_results_class.py  niveau_class.py  niveau_extractor.py  organisateur.py  organisme_fields.py  organismes_hit.py  poule_fields.py  poules_query.py  (+12 more)
src/ffbb_api_client_v3/utils/: cache_manager.py  converter_utils.py  retry_utils.py  (+3 more)
src/ffbb_data_client/: __init__.py  config.py
tests/: conftest.py  test_001_unit_tests_core.py  test_004_ffbb_api_client_v2.py  test_005_integration_user_journey.py  test_00_api_ffbb_app_client.py  test_010_integration_user_journey.py  test_011_enhanced_integration.py  test_013_secure_logging_integration.py  test_015_input_validation_integration.py  test_018_cache_manager.py  test_01_meilisearch_client.py  test_020_token_manager.py  test_021_raw_json_model_conversion.py  test_022_to_dict_round_trip.py  test_025_competition_id_type_competition.py  test_026_competition_id_type_competition_generique.py  test_02_meilisearch_client_extension.py  test_030_id_engagement_equipe.py  test_037_tournoi_type_class.py  test_038_type_association_libelle.py  test_03_ffbb_api_client_v2.py  test_041_terrains_inner_models.py  test_042_pratiques_inner_models.py  test_046_converter_utils.py  test_047_coverage_gaps.py  test_048_missing_coverage.py  test_secure_logging.py  test_secure_logging_integration.py
tests/e2e/: conftest.py
tests/integration/: conftest.py  test_500_user_journey.py  test_501_user_journey_v2.py  test_501_user_journey_v3.py  test_502_enhanced_integration.py  test_503_secure_logging.py  test_504_input_validation.py  test_505_retry_timeout.py  test_506_raw_json_model_conversion.py
tests/unit/: conftest.py
website/: index.html  robots.txt  sitemap.xml
website/css/: style.css
(+156 files in other folders)
