[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
strict_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "dateutil.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests_cache.*"
ignore_missing_imports = true

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "standard"
