[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
strict_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "dateutil.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests_cache.*"
ignore_missing_imports = true

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "standard"

[tool.pylint.messages_control]
# Disable warnings for API field names that match Python built-ins
disable = [
    "redefined-builtin",  # API models use 'id', 'type' as field names
]

[tool.pylint.main]
# Ignore generated model files for certain checks
ignore-patterns = ["test_.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
