# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = ffbb_api_client_v3
description = FFBB API Python Client (V3) — SDK asynchrone pour les Statistiques de Basket France. Type-safe Pydantic models, async/sync, Meilisearch.
author = nickdesi
author_email = nicolas.desimone@gmail.com
keywords = ffbb, basketball, statistiques, france, api, python-sdk, pydantic, asynchrone, meilisearch, basket-france
license = Apache-2.0
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/nickdesi/FFBBApiClientV3
# Add here related links, for example:
project_urls =
    Homepage = https://nickdesi.github.io/FFBBApiClientV3/
    Documentation = https://nickdesi.github.io/FFBBApiClientV3/
    Source = https://github.com/nickdesi/FFBBApiClientV3
    Changelog = https://github.com/nickdesi/FFBBApiClientV3/blob/main/CHANGELOG.md
    Tracker = https://github.com/nickdesi/FFBBApiClientV3/issues
    Release Notes = https://github.com/nickdesi/FFBBApiClientV3/blob/main/RELEASE_NOTES.md
#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
#    Download = https://pypi.org/project/PyScaffold/#files
#    Twitter = https://twitter.com/PyScaffold

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Framework :: AsyncIO
    Operating System :: OS Independent
    Natural Language :: French
    License :: OSI Approved :: Apache Software License


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.10

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    python-dotenv
    readme_renderer
    python-dateutil
    httpx>=0.27.0
    hishel[async]>=0.0.32
    pydantic>=2.0.0

[options.package_data]
* = py.typed

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install ffbb_api_client_v3[PDF]` like:
# PDF = ReportLab; RXP

# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    coverage>=7.0.0
    pytest>=9.0.0
    pytest-xdist>=3.0.0
    pytest-cov>=7.0.0
    respx>=0.21.0
    pytest-asyncio>=0.23.0

# Type stubs for type checking
typing =
    types-python-dateutil

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = ffbb_api_client_v3.module:function
# For example:
# console_scripts =
#     fibonacci = ffbb_api_client_v3.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 140
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
    tests/test_005_integration_user_journey.py
    tests/test_010_integration_user_journey.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.6
package = ffbb_api_client_v3
extensions =
    github_actions
    pre_commit
