# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = ffbb-data-client
description = FFBB Data Client — SDK Python asynchrone pour les Statistiques de Basket France. Type-safe Pydantic models, async/sync, Meilisearch.
author = nickdesi
author_email = nicolas.desimone@gmail.com
keywords = ffbb, basketball, statistiques, france, api, python-sdk, pydantic, asynchrone, meilisearch, basket-france
license = Apache-2.0
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/nickdesi/ffbb-data-client
# Add here related links, for example:
project_urls =
    Homepage = https://nickdesi.github.io/ffbb-data-client/
    Documentation = https://nickdesi.github.io/ffbb-data-client/
    Source = https://github.com/nickdesi/ffbb-data-client
    Changelog = https://github.com/nickdesi/ffbb-data-client/blob/main/CHANGELOG.md
    Tracker = https://github.com/nickdesi/ffbb-data-client/issues
    Release Notes = https://github.com/nickdesi/ffbb-data-client/blob/main/RELEASE_NOTES.md
#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
#    Download = https://pypi.org/project/ffbb-data-client/#files
#    Twitter = https://twitter.com/PyScaffold

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Framework :: AsyncIO
    Operating System :: OS Independent
    Natural Language :: French


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.10

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    python-dotenv>=1.2.2
    readme_renderer[md]>=44.0
    python-dateutil>=2.9.0.post0
    httpx>=0.28.1
    hishel[async]>=1.2.1
    pydantic>=2.13.3

[options.package_data]
* = py.typed
ffbb_data_client.data = *.json

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install ffbb_data_client[PDF]` like:
# PDF = ReportLab; RXP

# Add here test requirements (semicolon/line-separated)
testing =
    setuptools>=82.0.1
    coverage>=7.13.5
    pytest>=9.0.3
    pytest-xdist>=3.8.0
    pytest-cov>=7.1.0
    respx>=0.23.1
    pytest-asyncio>=1.3.0

# Type stubs for type checking
typing =
    types-python-dateutil>=2.9.0.20260408

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = ffbb_data_client.module:function
# For example:
# console_scripts =
#     fibonacci = ffbb_data_client.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 140
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
    tests/test_005_integration_user_journey.py
    tests/test_010_integration_user_journey.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.6
package = ffbb_data_client
extensions =
    github_actions
    pre_commit
